@@ -2,6 +2,8 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - Allow any number of value columns in MySQL storage backend.
+
 0.04      2012-04-25 10:22:37 Europe/Berlin
 
   - delete() now handles migrations correctly.
